--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!--lib css-->
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
-    <link rel="stylesheet" href="./css/jquery.fullPage.css"/>
+    <link rel="stylesheet" href="css/jquery.fullPage.css"/>
     <link rel="stylesheet" href="css/animate.css">
 
     <!--personal css-->
@@ -261,10 +261,10 @@
                             <div class="portfolio-item">
                                 <div class="hover-bg">
                                     <div class="hover-text">
-                                        <h4><a href='#' target='_blank' title="智能家居"></a>智能家居</h4>
-                                        <small>技术：html+css+js</small>
+                                        <h4><a href='#' target='_blank' title="车联网"></a>车联网</h4>
+                                        <small>技术：arm平台+zigbee</small>
                                         <i class="fa fa-search"></i></div>
-                                    <img src="img/01.jpg" class="img-responsive" alt="智能家居">
+                                    <img src="img/01chelianwang.png" class="img-responsive" alt="车联网">
                                 </div>
                             </div>
                         </div>
@@ -445,5 +445,4 @@
 <script src="lib/jquery.easing.1.3.js"></script>
 <script src="lib/jquery.isotope.js"></script>
 <script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="js/handler.js"></script>
-<script src="js/resumeEnter.js"></script>
+<script src="js/index.js"></script>
