--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!--lib css-->
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css"/>
-    <link rel="stylesheet" href="css/jquery.fullPage.css"/>
+    <link rel="stylesheet" href="css/jquery.fullpage.css"/>
     <link rel="stylesheet" href="css/animate.css">
 
     <!--personal css-->
